--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ google-pasta==0.2.0
 grpcio==1.71.0
 h11==0.16.0
 h5py==3.13.0
-huggingface-hub==0.10.1
+huggingface-hub>=0.14.1,<1.0
 idna==3.10
 immutabledict==4.2.1
 importlib_resources==6.5.2
